--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <title>Console</title>
 </head>
 <body style="background-color: #222; font-weight: bolder; font-family: 'Roboto', sans-serif;">
-    <script type="module" src="04.js"></script>
+    <script type="module" src="emailsReg.js"></script>
 </body>
 </html>
